Fixed Navbar overflow, centering, and layering issues

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+#headerName a{
+  color: orange;
+}
+
 html {
   background: url("Components/campus-centeral.jpg") fixed no-repeat;
   background-size: cover;
